# windbot

./: .env.example  Dockerfile  FORCE_JOIN_README.md  README.md  add_2fa_columns.sql  bot-old.py  bot.py  cli.py  create_cards_table.py  db.py  debug_logger.py  docker-compose.yml  error.txt  fix_2fa.py  pyproject.toml  requirements.txt  run_migration.py  schema.sql  setup_force_join.py
handlers/: admin_accounts.py  admin_cards.py  admin_price.py  card_manager.py  referral.py
migrations/: 001_create_cards_table.sql  add_cards_table.sql  add_referral_system.sql  add_twofa_limits.sql  add_twofa_used_column.sql
web_admin/: INSTALL.md  README.md  app.py  config.py  requirements.txt  run.py
web_admin/templates/: add_seat.html  base.html  cards.html  dashboard.html  login.html  orders.html  seats.html  users.html  view_seat.html
web_admin/utils/: __init__.py  helpers.py
