[tool.poetry]
name = "wind_reseller"
version = "0.1.0"
description = "Telegram bot for wind reselling"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "21.1"
psycopg2-binary = "2.9.9"
pyotp = "2.9.0"
cryptography = "42.0.5"
python-dotenv = "1.0.1"
tabulate = "0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
